--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.1.0",
   "description": "Suresh Murali's Portfolio",
   "engines": {
-    "node": ">=22.13.0",
-    "npm": ">=9.5.1",
-    "yarn": ">=1.22.22"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -37,8 +36,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "prop-types": "^15.8.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "18",
+    "react-dom": "18",
     "react-responsive": "^6.0.1",
     "styled-components": "^4.4.1",
     "ua-parser-js": "^0.7.33",
